appId: ${APP_ID}
---
- launchApp
- runFlow:
    file: subflows/open-navigation-menu.yaml
- tapOn: General
- extendedWaitUntil:
    visible: Select language
    timeout: 10000
- tapOn: Select language
- extendedWaitUntil:
    visible: "Deutsch.*"
    timeout: 10000
- assertVisible: "English.*"
- assertVisible: "Deutsch.*"
- assertVisible: "Espa.*"
- tapOn: "Deutsch.*"
- extendedWaitUntil:
    visible: Sprache auswählen
    timeout: 10000
- tapOn: "English.*"
- extendedWaitUntil:
    visible: Select language
    timeout: 10000
- tapOn: Back
- extendedWaitUntil:
    visible: General
    timeout: 10000
- tapOn: Back
- extendedWaitUntil:
    visible: General
    timeout: 10000
- tapOn: Back
- extendedWaitUntil:
    visible: Search your documents
    timeout: 10000
