appId: ${APP_ID}
---
- stopApp
- launchApp
- extendedWaitUntil:
    visible: Search your documents
    timeout: 30000
- runFlow:
    file: subflows/open-navigation-menu.yaml
- tapOn: Collections
- extendedWaitUntil:
    visible: Collections
    timeout: 10000
- scrollUntilVisible:
    element: "Travel Archive\n0 items"
    centerElement: true
    timeout: 30000
- tapOn:
    text: "Travel Archive\n0 items"
    point: 25%,50%
- extendedWaitUntil:
    notVisible: "Travel Archive\n0 items"
    timeout: 10000
- extendedWaitUntil:
    visible: Nothing to see here
    timeout: 10000
- assertVisible: Travel Archive
- assertVisible: There are no items in this collection
- back
- back
- back
- extendedWaitUntil:
    visible: Search your documents
    timeout: 10000
