appId: ${APP_ID}
---
- launchApp
- extendedWaitUntil:
    visible: Search your documents
    timeout: 10000
- runFlow:
    file: subflows/open-navigation-menu.yaml
- scrollUntilVisible:
    element: Logout
- extendedWaitUntil:
    visible: Logout
    timeout: 10000
- tapOn: Logout
- extendedWaitUntil:
    visible: Are you sure you want to logout?
    timeout: 10000
- tapOn: Yes, logout
- extendedWaitUntil:
    visible: Login to existing account
    timeout: 20000
- assertVisible: Login to existing account
- assertNotVisible: Search your documents
